--- a/templates/navbar/index.html.twig
+++ b/templates/navbar/index.html.twig
@@ -47,12 +47,14 @@
 
                         <li><a href="{{ path('app_category') }}" class="block hover:text-orange-500">Categories</a></li>
 
-                    {% elseif "ROLE_EMPLOYEE" in app.user.roles %}
-                        <li><a href="{{ path('allOrders') }}" class="block hover:text-orange-500">Orders</a></li>
-                        <li><a href="{{ path('orderInProgress') }}" class="block hover:text-orange-500">Orders in progress</a></li>
-                        <li><a href="{{ path('getStock') }}" class="block hover:text-orange-500">Stock</a></li>
-                        <li><a href="{{ path('app_conversations_sav') }}" class="block hover:text-orange-500">SAV messages</a></li>
-                    {% endif%}
+                        {% endif%}
+                {% if "ROLE_EMPLOYEE" in app.user.roles %}
+                    <li><a href="{{ path('allOrders') }}" class="block hover:text-orange-500">Orders</a></li>
+                    <li><a href="{{ path('orderInProgress') }}" class="block hover:text-orange-500">Orders in progress</a></li>
+                    <li><a href="{{ path('getStock') }}" class="block hover:text-orange-500">Stock</a></li>
+                    <li><a href="{{ path('app_conversations_sav') }}" class="block hover:text-orange-500">SAV messages</a></li>
+
+                {% endif %}
 
                     <li><a href="{{ path('app_my_orders') }}" class="block hover:text-orange-500">My Orders</a></li>
                     <li><a href="{{ path('app_conversation') }}" class="block hover:text-orange-500">Contact</a></li>
